Add new programm - Caclculation of days

--- a/program.html
+++ b/program.html
@@ -20,8 +20,9 @@
             </ul>
         </div>
         <div class="content">
-             <div class="block"><a href="password.html"><img src="img/password.jpg" alt="Генератор пароля"></a><br>Генератор пароля
-            </div>
+             <div class="block"><a href="password.html"><img src="img/password.jpg" alt="Генератор пароля"></a><br>Генератор пароля</div>
+             <div class="block"><a href="calculation_of_days.html"><img src="img/calculation_of_days.jpg" alt="Калькулятор даты"></a><br>Калькулятор даты</div>
+        </div>
             
 
         </div>
